# huffman-tree

./: .gitignore  Cargo.toml  README.md  compressed.txt  de-compressed.txt  file.txt
haskell-mzip/: ChangeLog.md  README.md  haskell-mzip.cabal  package.yaml
haskell-mzip/app/: Main.hs
haskell-mzip/src/: Compress.hs  Lib.hs  Tree.hs  Types.hs
src/: debug.rs  decode.rs  encode.rs  main.rs  tree.rs  types.rs
