[package]
name = "mzip"
version = "0.1.0"
authors = ["Mattias de los Rios Rogers <delosrogers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = 1

[dependencies]
rand = "0.8.3"
partial_application = "0.2.1"
rayon = "1.5.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.59"
structopt = "0.3.21"